[package]
name = "scout"
version = "0.1.0"
authors = ["Jared Haight <1220886+jaredhaight@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
sysinfo = "0.9.5"
winreg = "0.6"
wmi = "0.4"