[package]
name = "scout"
version = "0.1.0"
authors = ["@jaredhaight"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
winapi = "0.3.8"
winreg = "0.6.2"
proclist = "0.9.2"
wmi = "0.4.6"
